--- a/PowerLogViewer/PowerLogViewer/MainWindow.xaml
+++ b/PowerLogViewer/PowerLogViewer/MainWindow.xaml
@@ -3,10 +3,39 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      
         xmlns:local="clr-namespace:PowerLogViewer"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="1080" Width="1920">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="60"/>
+            <RowDefinition Height="3"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+   
+            
+            <Menu Grid.Row="0">
+                <MenuItem Header="File">
+                    <MenuItem x:Name="miImportFile" Header="Import..." Click="miImportFile_Click" />
+                    <MenuItem Header="Open Session..."/>
+                    <MenuItem Header="Save Session as..."/>
+                </MenuItem>
+            </Menu>
         
+      
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="80"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBox x:Name="txtSearch"  AcceptsReturn="True" />
+                    <Button Grid.Column="1" x:Name="btDoSearch" Content="Search" />
+                </Grid>
+       
+        <GridSplitter Grid.Row="2" ResizeDirection="Rows" ResizeBehavior="PreviousAndNext" HorizontalAlignment="Stretch"  />
+        <DataGrid Grid.Row="3" x:Name="dgLogentries"  CanUserAddRows="False" CanUserDeleteRows="False" CanUserSortColumns="False"/>
+
     </Grid>
 </Window>
