--- a/PowerLogViewer/PowerLogViewer/MainWindow.xaml
+++ b/PowerLogViewer/PowerLogViewer/MainWindow.xaml
@@ -14,26 +14,29 @@
             <RowDefinition Height="3"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-   
-            
-            <Menu Grid.Row="0">
-                <MenuItem Header="File">
-                    <MenuItem x:Name="miImportFile" Header="Import..." Click="miImportFile_Click" />
-                    <MenuItem Header="Open Session..."/>
-                    <MenuItem Header="Save Session as..."/>
-                </MenuItem>
-            </Menu>
-        
-      
-                <Grid Grid.Row="1">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="80"/>
-                    </Grid.ColumnDefinitions>
-                    <TextBox x:Name="txtSearch"  AcceptsReturn="True" />
-                    <Button Grid.Column="1" x:Name="btDoSearch" Content="Search" />
-                </Grid>
-       
+
+
+        <Menu Grid.Row="0">
+            <MenuItem Header="File">
+                <MenuItem x:Name="miImportFile" Header="Import..." Click="miImportFile_Click" />
+                <MenuItem Header="Open Session..."/>
+                <MenuItem Header="Save Session as..."/>
+            </MenuItem>
+        </Menu>
+
+
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="50"/>
+
+            </Grid.ColumnDefinitions>
+            <TextBox x:Name="txtSearch"  AcceptsReturn="True" />
+            <Button Grid.Column="1" x:Name="btDoSearch" Content="Search" Click="btDoSearch_Click" />
+            <Button Grid.Column="2" x:Name="btReset" Content="Reset" Click="btResetSearch_Click" />
+        </Grid>
+
         <GridSplitter Grid.Row="2" ResizeDirection="Rows" ResizeBehavior="PreviousAndNext" HorizontalAlignment="Stretch"  />
         <DataGrid Grid.Row="3" x:Name="dgLogentries"  CanUserAddRows="False" CanUserDeleteRows="False" CanUserSortColumns="False"/>
 
