--- a/PowerLogViewer/PowerLogViewer/MainWindow.xaml
+++ b/PowerLogViewer/PowerLogViewer/MainWindow.xaml
@@ -11,7 +11,7 @@
     <Window.Resources>
         <conv:RemoveNewLineConverter x:Key="removeNewLineConverter" />
     </Window.Resources>
-    
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
@@ -28,7 +28,6 @@
             </MenuItem>
         </Menu>
 
-
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -42,25 +41,32 @@
         </Grid>
 
         <GridSplitter Grid.Row="2" ResizeDirection="Rows" ResizeBehavior="PreviousAndNext" HorizontalAlignment="Stretch"  />
-        
+
         <DataGrid Grid.Row="3" x:Name="dgLogentries"  CanUserAddRows="False" CanUserDeleteRows="False" CanUserSortColumns="False" AutoGenerateColumns="False">
+            <DataGrid.Resources>
+                <Style x:Key="ReadOnlyEditStyle" TargetType="TextBox">
+                    <Setter Property="IsReadOnly"  Value="true"/>
+                </Style>
+            </DataGrid.Resources>
+            
             <DataGrid.RowDetailsTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal" >
                         <StackPanel>
                             <TextBlock Text="Message" FontWeight="Bold"  Margin="0,9,0,0"  />
-                            <Separator/>                           
+                            <Separator/>
                             <TextBox Text="{Binding Message, Mode=OneWay}" Background="Transparent"  TextWrapping="Wrap" IsReadOnly="True" BorderThickness="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
                             <TextBlock Text="Attributes" FontWeight="Bold"  Margin="0,9,0,0"  />
                             <Separator/>
-                            <TextBox Text="{Binding Attributes, Mode=OneWay}" Background="Transparent"  TextWrapping="Wrap" IsReadOnly="True" BorderThickness="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />                            
+                            <TextBox Text="{Binding Attributes, Mode=OneWay}" Background="Transparent"  TextWrapping="Wrap" IsReadOnly="True" BorderThickness="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
                         </StackPanel>
                     </StackPanel>
                 </DataTemplate>
             </DataGrid.RowDetailsTemplate>
+            
             <DataGrid.Columns>
-                <DataGridTextColumn Binding="{Binding RunNumber}" Header="#" Width="15" />
-                <DataGridTextColumn x:Name="Level" Binding="{Binding Level}" Header="Level">
+                <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}" Binding="{Binding RunNumber}" Header="#" Width="15" />
+                <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}"  Binding="{Binding Level}" Header="Level">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="{x:Type TextBlock}">
                             <Style.Triggers>
@@ -73,16 +79,16 @@
                             </Style.Triggers>
                         </Style>
                     </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>                  
-                <DataGridTextColumn Binding="{Binding Category}" Header="Category" Width="35" />
-                <DataGridTextColumn Binding="{Binding Component}" Header="Component" Width="35" />
-                <DataGridTextColumn Binding="{Binding TimeStamp, StringFormat=\{0:dd.MM.yy HH:mm:ss\}}" Header="Time" Width="99" />
-                <DataGridTextColumn Binding="{Binding Thread}" Header="Thread" Width="50" />
-                <DataGridTextColumn Binding="{Binding Process}" Header="Process" Width="50" />
-                <DataGridTextColumn Binding="{Binding Session}" Header="Session" Width="35" />
-                <DataGridTextColumn Binding="{Binding Message}" Header="Message" Width="*" />
-                <DataGridTextColumn Binding="{Binding Attributes, Converter={StaticResource removeNewLineConverter}}" Header="Attributes" Width="700" />
-                <DataGridTextColumn Binding="{Binding FileName}" Header="Filename" Width="85" Visibility="Hidden" />
+                </DataGridTextColumn>
+                <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}" Binding="{Binding Category}" Header="Category" Width="35"/>
+                <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}" Binding="{Binding Component}" Header="Component" Width="35" />
+                <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}" Binding="{Binding TimeStamp, StringFormat=\{0:dd.MM.yy HH:mm:ss\}}" Header="Time" Width="99" />
+                <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}" Binding="{Binding Thread}" Header="Thread" Width="50" />
+                <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}" Binding="{Binding Process}" Header="Process" Width="50" />
+                <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}" Binding="{Binding Session}" Header="Session" Width="35" />
+                <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}" Binding="{Binding Message}" Header="Message" Width="*" />
+                <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}" Binding="{Binding Attributes, Converter={StaticResource removeNewLineConverter}}" Header="Attributes" Width="700" />
+                <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}" Binding="{Binding FileName}" Header="Filename" Width="85" Visibility="Hidden" />
             </DataGrid.Columns>
         </DataGrid>
 
