--- a/PowerLogViewer/PowerLogViewer/MainWindow.xaml
+++ b/PowerLogViewer/PowerLogViewer/MainWindow.xaml
@@ -15,7 +15,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
-            <RowDefinition Height="60"/>
+            <RowDefinition Height="80"/>
             <RowDefinition Height="3"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
@@ -26,16 +26,16 @@
                 <MenuItem Header="Open Session..."/>
                 <MenuItem Header="Save Session as..."/>
             </MenuItem>
+
         </Menu>
 
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="50"/>
-                <ColumnDefinition Width="50"/>
-
+                <ColumnDefinition Width="50"/>             
             </Grid.ColumnDefinitions>
-            <TextBox x:Name="txtSearch"  AcceptsReturn="True" />
+            <TextBox Grid.Column="0" x:Name="txtSearch"  AcceptsReturn="True" />
             <Button Grid.Column="1" x:Name="btDoSearch" Content="Search" Click="btDoSearch_Click" />
             <Button Grid.Column="2" x:Name="btReset" Content="Reset" Click="btResetSearch_Click" />
         </Grid>
@@ -46,6 +46,9 @@
             <DataGrid.Resources>
                 <Style x:Key="ReadOnlyEditStyle" TargetType="TextBox">
                     <Setter Property="IsReadOnly"  Value="true"/>
+                </Style>
+                <Style TargetType="DataGridColumnHeader">
+                    <EventSetter Event="MouseRightButtonDown"  Handler="DataGridColumnHeader_MouseRightButtonDown" />
                 </Style>
             </DataGrid.Resources>
             
@@ -65,8 +68,8 @@
             </DataGrid.RowDetailsTemplate>
             
             <DataGrid.Columns>
-                <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}" Binding="{Binding RunNumber}" Header="#" Width="15" />
-                <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}"  Binding="{Binding Level}" Header="Level">
+                <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}" Binding="{Binding RunNumber}" Header="#" Width="10" />
+                <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}"  Binding="{Binding Level}" Header="Level" Width="40">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="{x:Type TextBlock}">
                             <Style.Triggers>
@@ -82,9 +85,8 @@
                 </DataGridTextColumn>
                 <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}" Binding="{Binding Category}" Header="Category" Width="35"/>
                 <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}" Binding="{Binding Component}" Header="Component" Width="35" />
-                <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}" Binding="{Binding TimeStamp, StringFormat=\{0:dd.MM.yy HH:mm:ss\}}" Header="Time" Width="99" />
-                <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}" Binding="{Binding Thread}" Header="Thread" Width="50" />
-                <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}" Binding="{Binding Process}" Header="Process" Width="50" />
+                <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}" Binding="{Binding TimeStamp, StringFormat=\{0:dd.MM.yy HH:mm:ss.fff\}}" Header="TimeStamp" Width="145" />
+                <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}" Binding="{Binding ProcessThread}" Header="ProcessThread" Width="80" />
                 <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}" Binding="{Binding Session}" Header="Session" Width="35" />
                 <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}" Binding="{Binding Message}" Header="Message" Width="*" />
                 <DataGridTextColumn EditingElementStyle="{StaticResource ReadOnlyEditStyle}" Binding="{Binding Attributes, Converter={StaticResource removeNewLineConverter}}" Header="Attributes" Width="700" />
