--- a/PowerLogViewer/PowerLogViewer/MainWindow.xaml
+++ b/PowerLogViewer/PowerLogViewer/MainWindow.xaml
@@ -32,12 +32,15 @@
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="50"/>
-                <ColumnDefinition Width="50"/>             
+                <ColumnDefinition Width="100"/>
+                        
             </Grid.ColumnDefinitions>
             <TextBox Grid.Column="0" x:Name="txtSearch"  AcceptsReturn="True" />
-            <Button Grid.Column="1" x:Name="btDoSearch" Content="Search" Click="btDoSearch_Click" />
-            <Button Grid.Column="2" x:Name="btReset" Content="Reset" Click="btResetSearch_Click" />
+            <StackPanel Grid.Column="1" Orientation="Vertical">
+                <Button Margin="2" x:Name="btDoSearch" Content="Search" Click="btDoSearch_Click" IsEnabled="False" />
+                <Button Margin="2" x:Name="btReset" Content="Reset" Click="btResetSearch_Click" IsEnabled="False" />
+            </StackPanel>
+         
         </Grid>
 
         <GridSplitter Grid.Row="2" ResizeDirection="Rows" ResizeBehavior="PreviousAndNext" HorizontalAlignment="Stretch"  />
